fixing pricing position on mobile

--- a/339-A3-update/website/css/main.css
+++ b/339-A3-update/website/css/main.css
@@ -200,9 +200,9 @@ form.margin-bottom{
   background-color: rgba(230, 230, 230, 0.70);
   font-size: 1rem;
   font-family: "Brandon-reg";
-  padding: 1rem;
-  padding-top: 2.5rem;
+  padding: 0.75rem;
   transition: 1s;
+  text-align: center;
 }
 
 .product-header h3 {
@@ -214,12 +214,12 @@ form.margin-bottom{
   display: inline-block;
   margin-top: 0.3rem;
   margin-bottom: 0rem;
-  float: right;
+  font-size: 1rem;
 }
 
 .product-header-layer {
   position: absolute;
-  bottom: 0;
+  bottom: -1rem;
   width: 100%;
 }
 
@@ -341,6 +341,7 @@ form.margin-bottom{
 .cart-remove-button {
   text-align: right;
   font-size: 0.8rem;
+  padding-right: 1rem;
 }
 
 .cart-product-price, .cart-product-details {
@@ -363,6 +364,7 @@ form.margin-bottom{
   text-align: right;
   margin-right: 5rem;
   border-bottom: none;
+  padding-right: 1rem;
 }
 
 
@@ -596,7 +598,7 @@ form.margin-bottom{
   margin-top: 5rem;
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 7rem;
+  margin-bottom: 15rem;
 }
 
 #product-overview{
